[pom] Add opens for java nio for jdk 16+